--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,9 @@
 
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="id">Id</string>
+    <string name="name">Name</string>
+    <string name="age">Age</string>
+
+
 </resources>
